--- a/gb/22/1/21/n13519406.md
+++ b/gb/22/1/21/n13519406.md
@@ -1,78 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pxryyb358/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pxryyb358/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxryyb358/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pxryyb358/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pxryyb358/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pxryyb358/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pxryyb358/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Omicron疫情肆虐全国 澳数百家托儿所关闭</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
 
 <h6></h6>
-<hr>
-<p>【大纪元2022年01月21日讯】（大纪元记者肖婕<ahref="https://github.com/pxryyb358/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）随着Omicron<ahref="https://github.com/pxryyb358/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>肆虐全国，澳洲数百家<ahref="https://github.com/pxryyb358/djy/blob/master/gb/tag/%E6%89%98%E5%84%BF%E6%89%80.md#1">托儿所</a>已<ahref="https://github.com/pxryyb358/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%85%B3%E9%97%AD.md#1">被迫关闭</a>，政府被促向陷入困境的托儿所行业提供更多的财务援助。</p>
-<p><ahref="https://github.com/pxryyb358/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>儿童教育与关怀质量管理局（ACECQA）公布的数据显示，周四，大约286家<ahref="https://github.com/pxryyb358/djy/blob/master/gb/tag/%E6%89%98%E5%84%BF%E6%89%80.md#1">托儿所</a>因突发卫生事件暂时关闭。</p>
-<p>一周前的数字甚至更高。上周四，新州有295家托儿所暂时关闭，维州有93家，南澳51家。</p>
-<p>据澳新社消息，早期教育与关怀部门的咨询师布莱恩特（Lisa Bryant）说，<ahref="https://github.com/pxryyb358/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>正在“摧毁”托儿所行业。她说该行业感到被忽视，需要更多的财务援助才能生存。</p>
-<p>虽然因疫情关闭的托儿所不需要家长缴纳差额费（Gap Payment），仍可继续获得政府补贴，但布莱恩特说“这些钱不足以维持托儿所的运营”。</p>
-<p>政府公布的新数据显示，去年Delta疫情期间，仅4个多月，就有100多个托儿所长期关闭。</p>
-<p>参议院的估计数据显示，去年7月1日至11月1日，104个托儿所长期关门；几乎是每天就有一个托儿所关门。</p>
-<p>整个疫情期间，大约1405个托儿所暂时关闭，平均关闭时间9天。</p>
-<p>绿党参议员法鲁奇（Mehreen Faruqi）说，这些数据显示，托儿所行业需要更多的财务支持。“我的确很担心，在Omicron疫情期间，如果没有足够的早期教育支持，更多的托儿所将长期停业，就像在Delta疫情期间那样。”</p>
-<p>根据国家内阁上周通过的新规定，从事教育工作的感染病例密切接触者，现在可以继续工作，只要他们没有症状。</p>
-<p>联邦教育部一位发言人说，这一变化将使更多的服务机构保持开放。</p>
-<p>但布莱恩特说，这将使人们处于危险之中和加剧员工的恐惧，因为幼儿没有资格接种疫苗。</p>
-<p>澳洲独立教育联合会（IEUA）新州/首都行政区分会副主席康内尔（Gabrielle Connell）说，这种情况对托儿所来说是“糟糕透顶”。</p>
-<p>她说，劳动力已耗尽，人手面临短缺。已接触过病毒的人现在托儿所上班，他们不知道如何保护员工和儿童的安全。</p>
-<p>还有迹象表明，疫情阻止了家长把孩子送进托儿所。</p>
-<p>政府数据显示，与2020年3月28日相比，2021年10月31日，托儿所减少了约10万名儿童。</p>
-<p>教育部一位发言人说，联邦正在与各州、行政区和主要组织合作，了解和解决疫情对托儿所系统的影响。</p>
-<p>这位发言人说，疫情期间，联邦政府已投资约32亿澳元，用于支持家庭和维持托儿所运营，并提供了高达15万澳元的赠款，以帮助托儿所保持开放。</p>
-<p>责任编辑：岳明</p>
-<h3>了解更多澳洲即时要闻及生活资讯，请点击 <ahref="http://dajiyuan.com.au">dajiyuan.com.au</a></h3>
-<p>（本文未经许可不得转载或建立镜像网站）</p>
-<p>&nbsp;</p>
-
+<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/eizauy3553/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/eizauy3553/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/21/7/15/n13089527.md#1">大悉尼封锁期间 孩子不送托儿所 家庭无需付费</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/21/11/8/n13363241.md#1">控制疫情传播 澳洲学生或不用隔离只需检测</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/21/11/15/n13376702.md#1">维州托儿所员工短缺 大量儿童等候入托</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/1/17/n13510142.md#1">昆州医疗总监吁民众警惕流感症状 勿恐慌 　　</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/1/19/n13514379.md#1">澳染疫隔离期或缩至5天 新州加强针间隔期减至3个月</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/1/19/n13514730.md#1">总理：澳洲Omicron致死率远低于别国 无需封锁</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/1/20/n13516738.md#1">维州日增感染数量将触顶  住院人数二月份将达高峰</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/1/20/n13516790.md#1">两种抗病毒口服药与Novavax疫苗在澳获批</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/19/n13658677.md#1">南澳州选举工党大胜 将组建多数派政府</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/19/n13657222.md#1">澳财长：移民数量几年内难恢复至正常水平</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/7/n13421141.md#1">圣诞节期间 南澳边界有望继续开放</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/14/n13435793.md#1">南澳预计年底前可达90%接种率</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/17/n13442574.md#1">澳染疫人数爆炸性上升 专家仍持乐观态度</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13449537.md#1">Omicron病例增 总理明日召集紧急国家内阁会议</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/22/n13454037.md#1">圣诞节之际 南澳再次变更入境旅行规则</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/30/n13467744.md#1">南澳日增病例逾千 非紧急择期手术被取消</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/31/n13470761.md#1">新州新增逾两万病例 密切接触者规定有变</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/2/n13476933.md#1">新年伊始 南澳连续三日新增病例逾两千</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/4/n13480634.md#1">让历史生动重现 南澳艺术家为数百老照片着彩</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/4/n13480596.md#1">新学期学生能否返校上课？南澳两周内决定</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/29/n11829466.md#1" target="_blank">刘博：别让切尔诺贝利重演</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257087.md#1" target="_blank">【征文】凌晓辉：贞洁论（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/21/12/10/n13430091.md#1">【百年真相】革命还是暴动？湖南农民运动真相</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/13/n13643964.md#1">【未解之谜】穿越长城 是功能还是魔术？</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/9/n13632327.md#1">【百年真相】逆行的红二代 林立果“讨毛檄文”</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/5/n13624821.md#1">传统武术讲功夫 新武术是大跃进产物</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/15/n13646805.md#1">为何说“春分”一刻值千金？</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/18/n13656774.md#1">【新闻看点】拜习会漂亮话一堆 北京认怂服软？</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/18/n13656912.md#1">【秦鹏直播】拜习通话 习要转向？普京讲话被掐</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/18/n13656885.md#1">【车评】全新日系SAC 2022 Infiniti QX55 Sensory AWD</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/17/n13653719.md#1">驾拖拉机拉走俄导弹系统 乌克兰农民走红</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/16/n13651375.md#1">【有冇搞错】朱镕基反对习近平连任</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/17/n13652061.md#1">张晓宁被控二级谋杀 最高将获刑25年至无期</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/16/n13648824.md#1">邓伦被爆偷漏税遭罚亿元 或牵连杨颖杨幂杨紫</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/17/n13654085.md#1">乌克兰阵亡男星遗体寻获 生前留防弹衣给孩童</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/18/n13656832.md#1">大陆明星陆续遭封杀 中共出新招堵死复出路</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/18/n13656647.md#1">公寓遭俄军袭击 乌国著名女星史维兹中弹身亡</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/17/n13651995.md#1">Mina任品牌大使谈新生活目标：珍重自己</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/14/n13645167.md#1">洗衣机清洁2诀窍很重要！防霉菌、除异味</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/9/n13634222.md#1">很多人蛋白质吃不足 这样吃才能增肌减脂</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/14/n13645453.md#1">绿茶似疫苗？研究：儿茶素提升防御力、延长寿命</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/3/17/n13653321.md#1">一种乌龙茶有很好的保健功效 泡茶时间有讲究</a></li>
-<li><a href="https://github.com/pxryyb358/djy/blob/master/gb/22/2/18/n13586954.md#1">喝牛奶易得一型糖尿病？专家：有办法能预防</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/12/n8091804.md#1">【传奇】赵匡胤千里送京娘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/15/n12812584.md#1">罗马时代迫害基督徒 今生仍在偿还业债</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/23/n12829555.md#1">中共病毒（新冠病毒）的变异现灵性</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/11/n12804755.md#1">“后庭花”为什么是亡国之音的代称？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12837707.md#1">【传奇大观】天仙失言落凡尘 恋久生情再沉沦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/30/n12844511.md#1">【探索时分】台湾F16V升级 台海新战机来袭</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844409.md#1">【横河直播】世卫报告替中共甩锅 利益冲突遭疑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844230.md#1">【时事纵横】小粉红抵制完败？中捷牵线人坠机亡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/22/n12826574.md#1">不想花钱换手机？五招改善你的手机速度</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/27/n12839676.md#1">【名家专栏】攻击美国 中共欲重新定义人权</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841466.md#1">抵制声浪下 耐克、阿迪达斯产品仍遭哄抢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841758.md#1">“战狼”吴京用iPhone发文 遭网民嘲讽</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841453.md#1">香港金牌绿叶廖启智罹癌离世 享年66岁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844152.md#1">三个月6位港星离世 廖启智抗癌细节曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840451.md#1">宋柏纬胞姊现身餐车 黄秋生夸气质：全台最美</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840534.md#1">韩国名编剧金银淑新戏开播 男主角撞脸孔刘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840638.md#1">台湾福卫五号拍到 苏伊士运河“大排长荣”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840882.md#1">美国男子离职 老板竟以9万多个硬币付薪水</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12838700.md#1">减肥身体亮红灯 营养师：我正常吃三餐 瘦到48公斤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840728.md#1">泰贫女在海螺发现珍珠 罹癌母亲医药费有望</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12842315.md#1">泰国小偷行窃时竟然睡着 被警察叫醒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pxryyb358/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pxryyb358/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/21/n13519406.htm">Omicron疫情肆虐全国 澳数百家托儿所关闭</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/21/n13519406.htm"></a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pxryyb358/djy/blob/master/gb/22/1/21/n13519406.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pxryyb358/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pxryyb358/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pxryyb358/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pxryyb358/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxryyb358/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/1/21/n13519406.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
